// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single post page matches snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="card"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Single post page matches snapshot 2`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="card"
    >
      <div>
        <h3>
          Hello World
           →
        </h3>
        <p>
          This is the hello world conten
          ...
        </p>
        <p>
          alice@prisma.io
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Single post page matches snapshot 3`] = `<div />`;
